--- a/package.json
+++ b/package.json
@@ -10,8 +10,26 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.1.0",
+    "@react-navigation/native": "^7.0.14",
+    "@react-navigation/native-stack": "^7.2.0",
+    "@react-navigation/stack": "^7.1.1",
+    "i18next": "^24.2.1",
+    "i18next-browser-languagedetector": "^8.0.2",
+    "i18next-http-backend": "^3.0.1",
+    "i18next-locize-backend": "^7.0.2",
     "react": "18.2.0",
-    "react-native": "0.74.6"
+    "react-i18next": "^15.4.0",
+    "react-native": "0.74.6",
+    "react-native-gesture-handler": "^2.22.0",
+    "react-native-localize": "^3.4.1",
+    "react-native-paper": "^5.13.1",
+    "react-native-reanimated": "^3.14.0",
+    "react-native-safe-area-context": "^5.1.0",
+    "react-native-screens": "^4.5.0",
+    "react-native-url-polyfill": "^2.0.0",
+    "react-native-vector-icons": "^10.2.0",
+    "react-navigation-stack": "^2.10.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
