--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
     "@react-navigation/stack": "^7.1.1",
-    "i18next": "^24.2.1",
+    "i18next": "^24.2.2",
     "i18next-browser-languagedetector": "^8.0.2",
     "i18next-http-backend": "^3.0.1",
     "i18next-locize-backend": "^7.0.2",
@@ -24,6 +24,8 @@
     "react-native-gesture-handler": "^2.22.0",
     "react-native-localize": "^3.4.1",
     "react-native-paper": "^5.13.1",
+    "react-native-push-notification": "^8.1.1",
+    "react-native-push-notification-ios": "^0.0.0",
     "react-native-reanimated": "^3.14.0",
     "react-native-safe-area-context": "^5.1.0",
     "react-native-screens": "^4.5.0",
