--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native-screens": "^4.5.0",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-vector-icons": "^10.2.0",
+    "react-native-webview": "^13.13.1",
     "react-navigation-stack": "^2.10.4"
   },
   "devDependencies": {
