--- a/package.json
+++ b/package.json
@@ -11,19 +11,21 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.1.0",
+    "@react-native-community/push-notification-ios": "^1.11.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
     "@react-navigation/stack": "^7.1.1",
     "i18next": "^24.2.2",
-    "i18next-browser-languagedetector": "^8.0.2",
     "i18next-http-backend": "^3.0.1",
     "i18next-locize-backend": "^7.0.2",
     "react": "18.2.0",
+    "react-error-boundary": "^5.0.0",
     "react-i18next": "^15.4.0",
     "react-native": "0.74.6",
     "react-native-gesture-handler": "^2.22.0",
     "react-native-localize": "^3.4.1",
     "react-native-paper": "^5.13.1",
+    "react-native-permissions": "^5.2.4",
     "react-native-push-notification": "^8.1.1",
     "react-native-push-notification-ios": "^0.0.0",
     "react-native-reanimated": "^3.14.0",
@@ -43,6 +45,8 @@
     "@react-native/metro-config": "0.74.88",
     "@react-native/typescript-config": "0.74.88",
     "@types/react": "^18.2.6",
+    "@types/react-native-push-notification": "^8.1.4",
+    "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
