--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "react-error-boundary": "^5.0.0",
     "react-i18next": "^15.4.0",
     "react-native": "0.74.6",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.22.0",
+    "react-native-html-to-pdf": "^0.12.0",
     "react-native-localize": "^3.4.1",
     "react-native-paper": "^5.13.1",
     "react-native-permissions": "^5.2.4",
@@ -36,6 +38,7 @@
     "react-native-reanimated": "^3.14.0",
     "react-native-safe-area-context": "^5.1.0",
     "react-native-screens": "^4.5.0",
+    "react-native-share": "^12.0.3",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-webview": "^13.13.1",
