--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native-gesture-handler": "^2.22.0",
     "react-native-html-to-pdf": "^0.12.0",
     "react-native-localize": "^3.4.1",
+    "react-native-modal": "^13.0.1",
     "react-native-paper": "^5.13.1",
     "react-native-permissions": "^5.2.4",
     "react-native-push-notification": "^8.1.1",
