--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "accountsmanager",
+  "name": "account",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -10,59 +10,50 @@
     "test": "jest"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^2.1.0",
-    "@react-native-community/hooks": "^3.0.0",
-    "@react-native-community/push-notification-ios": "^1.11.0",
-    "@react-native-community/slider": "^4.5.5",
-    "@react-native-firebase/app": "^21.7.1",
-    "@react-native-firebase/auth": "^21.7.2",
-    "@react-native-firebase/database": "^21.7.2",
-    "@react-navigation/native": "^7.0.14",
-    "@react-navigation/native-stack": "^7.2.0",
-    "@react-navigation/stack": "^7.1.1",
-    "i18next": "^24.2.2",
-    "i18next-http-backend": "^3.0.1",
-    "i18next-locize-backend": "^7.0.2",
-    "react": "18.2.0",
+    "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-firebase/app": "^21.12.2",
+    "@react-native-firebase/auth": "^21.12.2",
+    "@react-native-firebase/database": "^21.12.2",
+    "@react-navigation/native": "^7.0.18",
+    "@react-navigation/native-stack": "^7.3.2",
+    "@react-navigation/stack": "^7.2.2",
+    "dotenv": "^16.4.7",
+    "i18next": "^24.2.3",
+    "i18next-http-backend": "^3.0.2",
+    "i18next-locize-backend": "^7.0.4",
+    "react": "19.0.0",
     "react-error-boundary": "^5.0.0",
-    "react-i18next": "^15.4.0",
-    "react-native": "0.74.6",
-    "react-native-fs": "^2.20.0",
-    "react-native-gesture-handler": "^2.22.0",
+    "react-i18next": "^15.4.1",
+    "react-native": "0.78.0",
+    "react-native-dotenv": "^3.4.11",
+    "react-native-gesture-handler": "^2.24.0",
     "react-native-html-to-pdf": "^0.12.0",
-    "react-native-localize": "^3.4.1",
-    "react-native-modal": "^13.0.1",
-    "react-native-paper": "^5.13.1",
-    "react-native-permissions": "^5.2.4",
-    "react-native-push-notification": "^8.1.1",
-    "react-native-push-notification-ios": "^0.0.0",
-    "react-native-reanimated": "^3.14.0",
-    "react-native-safe-area-context": "^5.1.0",
-    "react-native-screens": "^4.5.0",
-    "react-native-share": "^12.0.3",
-    "react-native-url-polyfill": "^2.0.0",
+    "react-native-modal": "^14.0.0-rc.1",
+    "react-native-reanimated": "^3.17.1",
+    "react-native-safe-area-context": "^5.3.0",
+    "react-native-screens": "^4.9.2",
+    "react-native-share": "^12.0.9",
     "react-native-vector-icons": "^10.2.0",
-    "react-native-webview": "^13.13.1",
-    "react-navigation-stack": "^2.10.4"
+    "react-native-webview": "^13.13.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@babel/preset-env": "^7.20.0",
-    "@babel/runtime": "^7.20.0",
-    "@react-native/babel-preset": "0.74.88",
-    "@react-native/eslint-config": "0.74.88",
-    "@react-native/metro-config": "0.74.88",
-    "@react-native/typescript-config": "0.74.88",
-    "@types/react": "^18.2.6",
-    "@types/react-native-push-notification": "^8.1.4",
-    "@types/react-native-vector-icons": "^6.4.18",
-    "@types/react-test-renderer": "^18.0.0",
-    "babel-jest": "^29.6.3",
+    "@babel/core": "^7.25.2",
+    "@babel/preset-env": "^7.25.3",
+    "@babel/runtime": "^7.25.0",
+    "@react-native-community/cli": "15.0.1",
+    "@react-native-community/cli-platform-android": "15.0.1",
+    "@react-native-community/cli-platform-ios": "15.0.1",
+    "@react-native/babel-preset": "0.78.0",
+    "@react-native/eslint-config": "0.78.0",
+    "@react-native/metro-config": "0.78.0",
+    "@react-native/typescript-config": "0.78.0",
+    "@types/jest": "^29.5.13",
+    "@types/react": "^19.0.0",
+    "@types/react-test-renderer": "^19.0.0",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
-    "react-native-dotenv": "^3.4.11",
-    "react-test-renderer": "18.2.0",
+    "react-test-renderer": "19.0.0",
     "typescript": "5.0.4"
   },
   "engines": {
